Remove React and still render properly

--- a/src/UI/Form.css
+++ b/src/UI/Form.css
@@ -5,7 +5,7 @@
   font-weight: bold;
   font-size: .8em;
   border-radius: .5em;
-  border: 2px solid #9bc768;
+  border: 2px solid #6cb9e7;
   color: #6d6d6d;
   -webkit-box-shadow: 0px 5px 17px black;
           box-shadow: 0px 5px 17px black;
