--- a/src/UI/Form.scss
+++ b/src/UI/Form.scss
@@ -8,7 +8,7 @@ $lightBlue : #6cb9e7;
 	font-weight: bold;
 	font-size: .8em;
 	border-radius: .5em;
-	border: 2px solid $lightGreen;
+	border: 2px solid $lightBlue;
 	color: rgb(109, 109, 109);
 	box-shadow: 0px 5px 17px black;
 }
