implement form events

--- a/src/UI/Form.scss
+++ b/src/UI/Form.scss
@@ -3,7 +3,7 @@ $lightBlue : #6cb9e7;
 
 .openedge-form {
 	background: white;
-	padding: 2em 3em 1.5em;
+	padding: 1em 1.5em .6em;
 	font-family: sans-serif;
 	font-weight: bold;
 	font-size: .8em;
