--- a/src/UI/Form.css
+++ b/src/UI/Form.css
@@ -1,6 +1,6 @@
 .openedge-form {
   background: white;
-  padding: 2em 3em 1.5em;
+  padding: 1em 1.5em .6em;
   font-family: sans-serif;
   font-weight: bold;
   font-size: .8em;
