--- a/src/UI/Form.scss
+++ b/src/UI/Form.scss
@@ -4,7 +4,6 @@ $lightBlue : #6cb9e7;
 .openedge-form {
 	background: white;
 	padding: 1em 1.5em .6em;
-	font-family: sans-serif;
 	font-weight: bold;
 	font-size: .8em;
 	border-radius: .5em;
@@ -14,8 +13,9 @@ $lightBlue : #6cb9e7;
 }
 
 .openedge-field {
-	
-	margin: 1.8em 0;
+
+	margin: 1.2rem 0;
+	font-family: sans-serif;
 
 	label {
 		text-transform: uppercase;
